--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.thymeleaf.suffix=.html
 spring.web.resources.chain.cache=false
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/ewd
+spring.datasource.url=jdbc:mysql://localhost:3306/ewdherexamen
 spring.datasource.username=root
 spring.datasource.password=Snoeper9758*
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
